Added objectives and initial part of reference framework

--- a/references.bib
+++ b/references.bib
@@ -59,5 +59,41 @@
     author = {Daehyung Park and Yuuna Hoshi and Harshal P. Mahajan and Ho Keun Kim and Zackory Erickson and Wendy A. Rogers and Charles C. Kemp},
 }
 
+@misc{cite_university_eia_general,
+    author = "{University EIA}",
+    title = {Mechatronics Engineering},
+    year  = {2021},
+    publisher = {University EIA},
+    note = {\url{https://www.eia.edu.co/ingenieria-mecatronica/}},
+}
+
+@misc{cite_rethink_robotics_baxter_factory_worker,
+    author = {Erico Guizzo and Evan Ackerman},
+    title = {How Rethink Robotics Built Its New Baxter Robot Worker},
+    year  = {2012},
+    publisher = {IEE Spectrum},
+    note = {\url{https://spectrum.ieee.org/robotics/industrial-robots/rethink-robotics-baxter-robot-factory-worker?utm_source=robots.ieee.org}},
+}
+
+@misc{cite_united_nations_sustainable_development,
+    author = "{United Nations}",
+    title = {Take Action for the Sustainable Development Goals},
+    year  = {2012},
+    publisher = {United Nations},
+    note = {\url{https://www.un.org/sustainabledevelopment/sustainable-development-goals/}},
+}
+
+@article{cite_service_robotics_and_human_labor,
+    title = {Service Robotics and Human Labor: A first technology assessment of substitution and cooperation},
+    journal = {Robotics and Autonomous Systems},
+    volume = {87},
+    pages = {348-354},
+    year = {2017},
+    issn = {0921-8890},
+    doi = {https://doi.org/10.1016/j.robot.2016.09.017},
+    url = {\url{https://www.sciencedirect.com/science/article/pii/S0921889016306285}},
+    author = {Michael Decker and Martin Fischer and Ingrid Ott},
+}
+
 
 
