Updated reference framework with correct APA cites

--- a/references.bib
+++ b/references.bib
@@ -91,9 +91,67 @@
     year = {2017},
     issn = {0921-8890},
     doi = {https://doi.org/10.1016/j.robot.2016.09.017},
-    url = {\url{https://www.sciencedirect.com/science/article/pii/S0921889016306285}},
+    note = {\url{https://www.sciencedirect.com/science/article/pii/S0921889016306285}},
     author = {Michael Decker and Martin Fischer and Ingrid Ott},
 }
 
+@Article{cite_SAM_an_assisted_robotic_device_to_help_quadriplegia_persons,
+    author={Fattal, Charles and Leynaert, Violaine and Laffont, Isabelle and Baillet, Axelle and Enjalbert, Michel and Leroux, Christophe},
+    title={SAM, an Assistive Robotic Device Dedicated to Helping Persons with Quadriplegia: Usability Study},
+    journal={International Journal of Social Robotics},
+    year={2019},
+    month={Jan},
+    day={01},
+    volume={11},
+    number={1},
+    pages={89-103},
+    issn={1875-4805},
+    doi={10.1007/s12369-018-0482-7},
+    note={\url{https://doi.org/10.1007/s12369-018-0482-7}}
+}
 
+@article{cite_multimodal_execution_monitor_with_anomaly_classification,
+    author={D. {Park} and Z. {Erickson} and T. {Bhattacharjee} and C. C. {Kemp}},
+    booktitle={2016 IEEE International Conference on Robotics and Automation (ICRA)}, 
+    title={Multimodal execution monitoring for anomaly detection during robot manipulation}, 
+    year={2016},
+    volume={},
+    number={},
+    pages={407-414},
+    doi={10.1109/ICRA.2016.7487160},
+    note={\url{https://ieeexplore.ieee.org/document/7487160}}
+}
+
+@article{cite_multimodal_anomaly_detector_for_robot_assisted_feeding_LSTM,
+    author={D. {Park} and Y. {Hoshi} and C. C. {Kemp}},
+    journal={IEEE Robotics and Automation Letters},
+    title={A Multimodal Anomaly Detector for Robot-Assisted Feeding Using an LSTM-Based Variational Autoencoder},
+    year={2018},
+    volume={3},
+    number={3},
+    pages={1544-1551},
+    doi={10.1109/LRA.2018.2801475},
+    note={\url{https://ieeexplore.ieee.org/document/8279425}}
+}
+
+@misc{cite_patent_mobile_human_friendly_assistive_robot, 
+    place={United States},
+    title={MOBILE HUMAN-FRIENDLY ASSISTIVE ROBOT},
+    number={US 2017/0095382 A1},
+    author="{Rensselaer Polytechnic Institute}",
+    year={2017},
+    note={\url{https://patentimages.storage.googleapis.com/c2/f4/81/2125f3800c4e4b/US20170095382A1.pdf}}
+}
+
+@article{cite_robot_for_humanity_empower_people_with_disabilities,
+    author = {Chen, Tiffany and Ciocarlie, Matei and Cousins, Steve and Grice, Phillip and Hawkins, Kelsey and Hsiao, Kaijen and Kemp, Charles and King, Chih-Hung and Lazewatsky, Daniel and Leeper, Adam and Nguyen, Hai and Paepcke, Andreas and Pantofaru, Caroline and Smart, William and Takayama, Leila},
+    year = {2013},
+    month = {03},
+    pages = {30-39},
+    title = {Robots for Humanity Using Assistive Robotics to Empower People with Disabilities},
+    volume = {20},
+    journal = {Robotics \& Automation Magazine, IEEE},
+    doi = {10.1109/MRA.2012.2229950},
+    note = {\url{https://www.researchgate.net/publication/260700777_Robots_for_Humanity_Using_Assistive_Robotics_to_Empower_People_with_Disabilities}}
+}
 
