Added initial part and titles of the theoretical background

--- a/references.bib
+++ b/references.bib
@@ -155,3 +155,24 @@
     note = {\url{https://www.researchgate.net/publication/260700777_Robots_for_Humanity_Using_Assistive_Robotics_to_Empower_People_with_Disabilities}}
 }
 
+@misc{cite_parkinsons_disease_symptomps_mayo_clinic,
+    author = "{Mayo Clinic}",
+    title = {Parkinson's disease},
+    year  = {2020},
+    publisher = {Mayo Clinic Staff},
+    note = {\url{https://www.mayoclinic.org/diseases-conditions/parkinsons-disease/symptoms-causes/syc-20376055}},
+}
+
+@misc{cite_robots_in_automotive_manufactoring_top_6_applications,
+    author = "{Genesis Systems}",
+    title = {Robots in Automotive Manufacturing: Top 6 Applications},
+    year  = {n.d.},
+    publisher = {Genesis Systems},
+    note = {\url{https://www.genesis-systems.com/blog/robots-automotive-manufacturing-top-6-applications}},
+}
+
+
+
+
+
+
